Reset test Parallax_Scrolling

--- a/index.html
+++ b/index.html
@@ -34,23 +34,23 @@
 <body>
     <div id="intro">
         storyyyyyyyyyy
-        <img src="images/coffee.png" style="float:right ; height:128px; width: 128px " />
+        <!-- <img src="images/coffee.png" style="float:right ; height:128px; width: 128px " />
         <img src="images/coffee.png" />
-        <img src="images/coffee.png" />
+        <img src="images/coffee.png" /> -->
     </div>
 
     <div id="second">
         second
 
-        <img src="images/coffee.png" />
-        <img src="images/coffee.png" />
+        <!-- <img src="images/coffee.png" />
+        <img src="images/coffee.png" /> -->
     </div>
 
     <div id="third">
         third
-
+        <!-- 
         <img src="images/coffee.png" />
-        <img src="images/coffee.png" />
+        <img src="images/coffee.png" /> -->
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
