--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Coffee Parallax Scrolling</title>
-    <link rel="stylesheet" href="main.css" media="screen" title="no title">
+    <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/style.css">
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="jquery-parallax-1/scripts/jquery.localscroll-1.2.7-min.js"></script>
@@ -32,11 +35,46 @@
 </head>
 
 <body>
+    <nav class="navbar default-red navbar-fixed-top" role="navigation">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+              </button>
+                <a class="navbar-brand waves-effect waves-light" href="#">Brand</a>
+            </div>
+
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#" class="waves-effect waves-light">Link <span class="sr-only">(current)</span></a></li>
+                    <li><a href="#" class="waves-effect waves-light">Link</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle waves-effect waves-light" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="#">Action</a></li>
+                            <li><a href="#">Another action</a></li>
+                            <li><a href="#">Something else here</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#">Separated link</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#">One more separated link</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <form class="navbar-form navbar-right" role="search">
+                    <div class="form-group waves-effect waves-light">
+                        <input type="text" class="form-control" placeholder="Search">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </nav>
+
     <div id="intro">
-        storyyyyyyyyyy
-        <!-- <img src="images/coffee.png" style="float:right ; height:128px; width: 128px " />
-        <img src="images/coffee.png" />
-        <img src="images/coffee.png" /> -->
+
     </div>
 
     <div id="second">
@@ -48,7 +86,7 @@
 
     <div id="third">
         third
-        <!-- 
+        <!--
         <img src="images/coffee.png" />
         <img src="images/coffee.png" /> -->
     </div>
@@ -57,6 +95,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+</body>
+
+</html>
+tstrap.min.js"></script>
 </body>
 
 </html>
