--- a/index.html
+++ b/index.html
@@ -36,16 +36,33 @@
 
 <body>
 
-    <nav>
-        <div class="nav-wrapper">
-            <a href="#" class="brand-logo center">Logo</a>
-            <ul id="nav-mobile" class="left hide-on-med-and-down">
-                <li><a href="sass.html">Sass</a></li>
-                <li><a href="badges.html">Components</a></li>
-                <li><a href="collapsible.html">JavaScript</a></li>
-            </ul>
+    <nav class="navbar-default navbar-fixed-top" role="navigation" style="background-color: #795548;box-shadow:5px 0px 12px gray;padding:3px;">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#" style="color:#efebe9;">收合式navbar</a>
+                <button type="button" name="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar" style="background-color: #efebe9;"></span>
+                  <span class="icon-bar" style="background-color: #efebe9;"></span>
+                  <span class="icon-bar" style="background-color: #efebe9;"></span>
+              </button>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <!-- <li class="active"><a href="#">Home</a></li> -->
+                    <li class="test">
+                        <a href="#" style="color:#999999;">Page1</a></li>
+                    <li class="test">
+                        <a href="#" style="color:#efebe9;">Page2</a></li>
+                    <li class="test">
+                        <a href="#" style="color:#efebe9;">Page3</a></li>
+                    <li class="test">
+                        <a href="#" style="color:#efebe9;">Page4</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
+
 
     <div id="intro">
 
