--- a/index.html
+++ b/index.html
@@ -36,28 +36,28 @@
 
 <body>
 
-    <nav class="navbar-default navbar-fixed-top" role="navigation" style="background-color: #795548;box-shadow:5px 0px 12px gray;padding:3px;">
+    <nav class="navbar-default navbar-fixed-top" role="navigation" style="background-color: #795548;box-shadow:5px 0px 12px black;padding:3px;">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#" style="color:#efebe9;">收合式navbar</a>
-                <button type="button" name="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                  <span class="sr-only">Toggle navigation</span>
+                <a class="navbar-brand" href="#" style="color:#efebe9;">豆</a>
+                <button type="button" id="hello" name="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2" style="border:2px blue none;">
+                  <span class="sr-only" style="background-color: #efebe9;">Toggle navigation</span>
                   <span class="icon-bar" style="background-color: #efebe9;"></span>
                   <span class="icon-bar" style="background-color: #efebe9;"></span>
                   <span class="icon-bar" style="background-color: #efebe9;"></span>
               </button>
             </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
                 <ul class="nav navbar-nav">
                     <!-- <li class="active"><a href="#">Home</a></li> -->
                     <li class="test">
-                        <a href="#" style="color:#999999;">Page1</a></li>
+                        <a href="species.html" style="color:#efebe9;">良豆精選</a></li>
                     <li class="test">
-                        <a href="#" style="color:#efebe9;">Page2</a></li>
+                        <a href="roast.html" style="color:#efebe9;">烘培藝術</a></li>
                     <li class="test">
-                        <a href="#" style="color:#efebe9;">Page3</a></li>
+                        <a href="coffee.html" style="color:#efebe9;">品味咖啡</a></li>
                     <li class="test">
-                        <a href="#" style="color:#efebe9;">Page4</a></li>
+                        <a href="master.html" style="color:#efebe9;">後記</a></li>
                 </ul>
             </div>
         </div>
@@ -69,7 +69,6 @@
     </div>
 
     <div id="second">
-        second
 
         <!-- <img src="images/coffee.png" />
         <img src="images/coffee.png" /> -->
@@ -89,7 +88,7 @@
 </body>
 
 </html>
-tstrap.min.js"></script>
+
 </body>
 
 </html>
