--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
     <nav class="navbar-default navbar-fixed-top" role="navigation" style="background-color: #795548;box-shadow:5px 0px 12px black;padding:3px;">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#" style="color:#efebe9;">豆</a>
+                <a class="navbar-brand" href="#" style="color:#efebe9;">
+                    <nobr><img src="images/coffees.png" style="height:25px;wight:25px;" /></nobr>
+                    <nobr>豆</nobr>
+                </a>
                 <button type="button" id="hello" name="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2" style="border:2px blue none;">
                   <span class="sr-only" style="background-color: #efebe9;">Toggle navigation</span>
                   <span class="icon-bar" style="background-color: #efebe9;"></span>
