更改背景圖片

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script type="text/javascript">
         $(#intro).parallax("50%", 0.1);
         $(#second).parallax("50%", 0.1);
-        //    $('.bg').parallax("50%", 0.4);
+        $(#forth).parallax("50%", 0.1);
         $(#third).parallax("50%", 0.3);
     </script>
 
@@ -52,9 +52,9 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
                 <ul class="nav navbar-nav">
-                    <!-- <li class="active"><a href="#">Home</a></li> -->
+                    <li class="test"><a href="#home" style="color:#efebe9;">Home</a></li>
                     <li class="test">
-                        <a href="species.html" style="color:#efebe9;">良豆精選</a></li>
+                        <a href="species.html" style="color:#efebe9;">精選介紹</a></li>
                     <li class="test">
                         <a href="roast.html" style="color:#efebe9;">烘培藝術</a></li>
                     <li class="test">
@@ -65,24 +65,11 @@
             </div>
         </div>
     </nav>
+    <div id="home"></div>
+    <div id="second"></div>
+    <div id="third"></div>
+    <div id="forth"></div>
 
-
-    <div id="intro">
-
-    </div>
-
-    <div id="second">
-
-        <!-- <img src="images/coffee.png" />
-        <img src="images/coffee.png" /> -->
-    </div>
-
-    <div id="third">
-        third
-        <!--
-        <img src="images/coffee.png" />
-        <img src="images/coffee.png" /> -->
-    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
