新增背景圖案＿咖啡豆

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             $('#second').parallax("50%", 0.1);
             $('#third').parallax("50%", 0.1);
             $('#forth').parallax("50%", 0.3);
+            //      $('.pag_bg1').parallax("50%", 0.3);
         });
     </script>
 
@@ -84,13 +85,21 @@
                 </div>
             </div>
         </div> -->
+        <img class="pag_bg1" src="images/coffees.png">
+        <img class="pag_bg2" src="images/coffees.png">
+        <img class="pag_bg3" src="images/coffees.png">
         <img id="homeIcon" src="images/home_icon.png" />
         <img id="an" src="images/homeText.png" />
 
 
     </div>
 
-    <div id="second"></div>
+    <div id="second">
+        <img class="pag_bg2" style="top:150%;" src="images/coffees.png">
+        <img class="pag_bg1" style="top:150%;" src="images/coffees.png">
+        <img class="pag_bg3" style="top:150%;" src="images/coffees.png">
+    </div>
+
     <div id="third"></div>
     <div id="forth"></div>
 
