--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
             $('#second').parallax("50%", 0.1);
             $('#third').parallax("50%", 0.1);
             $('#forth').parallax("50%", 0.3);
-            //      $('.pag_bg1').parallax("50%", 0.3);
         });
     </script>
 
@@ -40,6 +39,7 @@
     <![endif]-->
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="css/locate.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
 
 <body>
@@ -73,18 +73,7 @@
         </div>
     </nav>
     <div id="home">
-        <!-- <div class="container-fluid">
-            <div class="row" style="padding-top:10px;">
 
-                <div class="col-md-5  col-md-offset-1 ">
-                    <img id="homeIcon" src="images/home_icon.png" />
-                </div>
-
-                <div class="col-md-5  col-md-offset-4">
-                    <img id="an" src="images/homeText.png" />
-                </div>
-            </div>
-        </div> -->
         <img class="pag_bg1" src="images/coffees.png">
         <img class="pag_bg2" src="images/coffees.png">
         <img class="pag_bg3" src="images/coffees.png">
@@ -95,11 +84,25 @@
     </div>
 
     <div id="second">
+        <div class="container-fluid">
+            <div class="row" style="padding-top:10px;">
+
+                <div class="col-md-11  col-md-offset-1 ">
+                    <p id="pag2_text" style="font-size:100px; font-weight:bold; color:#795548; ">百種の豆</p>
+                </div>
+                <div class="col-md-2">1</div>
+                <div class="col-md-2">2</div>
+                <div class="col-md-2">3</div>
+                <div class="col-md-2">4</div>
+                <div class="col-md-2">5</div>
+                <div class="col-md-2">6</div>
+
+            </div>
+        </div>
         <img class="pag_bg2" style="top:150%;" src="images/coffees.png">
         <img class="pag_bg1" style="top:150%;" src="images/coffees.png">
         <img class="pag_bg3" style="top:150%;" src="images/coffees.png">
     </div>
-
     <div id="third"></div>
     <div id="forth"></div>
 
