--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="scripts/jquery.localscroll-1.2.7-min.js"></script>
     <script type="text/javascript" src="scripts/jquery.parallax-1.1.3.js"></script>
     <script type="text/javascript" src="scripts/jquery.scrollTo-1.4.2-min.js"></script>
-
+    <script type="text/javascript" src="js/mobile.js"></script>
     <script type="text/javascript">
         $(document).ready(function() {
             $('#home').parallax("50%", 0.1);
@@ -72,6 +72,9 @@
             </div>
         </div>
     </nav>
+
+
+
     <div id="home">
 
         <img class="pag_bg1" src="images/coffees.png">
