--- a/index.html
+++ b/index.html
@@ -16,27 +16,11 @@
     <script type="text/javascript" src="scripts/jquery.parallax-1.1.3.js"></script>
     <script type="text/javascript" src="scripts/jquery.scrollTo-1.4.2-min.js"></script>
     <script type="text/javascript" src="js/mobile.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function() {
-            $('#home').parallax("50%", 0.1);
-            $('#second').parallax("50%", 0.1);
-            $('#third').parallax("50%", 0.1);
-            $('#forth').parallax("50%", 0.3);
-        });
-    </script>
 
-
-
-    <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.2/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="css/locate.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -93,12 +77,12 @@
                 <div class="col-md-11  col-md-offset-1 ">
                     <p id="pag2_text" style="font-size:100px; font-weight:bold; color:#795548; ">百種の豆</p>
                 </div>
-                <div class="col-md-2">1</div>
-                <div class="col-md-2">2</div>
-                <div class="col-md-2">3</div>
-                <div class="col-md-2">4</div>
-                <div class="col-md-2">5</div>
-                <div class="col-md-2">6</div>
+                <div class="col-md-2 pag2_coffee" style="padding-left:20px">曼特寧</div>
+                <div class="col-md-2 pag2_coffee">巴西</div>
+                <div class="col-md-2 pag2_coffee">哥倫比亞</div>
+                <div class="col-md-2 pag2_coffee">摩卡</div>
+                <div class="col-md-2 pag2_coffee">爪哇</div>
+                <div class="col-md-2 pag2_coffee">藍山</div>
 
             </div>
         </div>
@@ -109,14 +93,6 @@
     <div id="third"></div>
     <div id="forth"></div>
 
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-</body>
-
-</html>
 
 </body>
 
