--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="scripts/jquery.parallax-1.1.3.js"></script>
     <script type="text/javascript" src="scripts/jquery.scrollTo-1.4.2-min.js"></script>
     <script type="text/javascript" src="js/mobile.js"></script>
+    <script type="text/javascript" src="js/pag2.js"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -74,21 +75,88 @@
         <div class="container-fluid">
             <div class="row" style="padding-top:10px;">
 
-                <div class="col-md-11  col-md-offset-1 ">
-                    <p id="pag2_text" style="font-size:100px; font-weight:bold; color:#795548; ">百種の豆</p>
+                <div class="col-md-12   ">
+                    <p id="pag2_text">百種の豆</p>
                 </div>
-                <div class="col-md-2 pag2_coffee" style="padding-left:20px">曼特寧</div>
-                <div class="col-md-2 pag2_coffee">巴西</div>
-                <div class="col-md-2 pag2_coffee">哥倫比亞</div>
-                <div class="col-md-2 pag2_coffee">摩卡</div>
-                <div class="col-md-2 pag2_coffee">爪哇</div>
-                <div class="col-md-2 pag2_coffee">藍山</div>
-
+                <!-- <p class="p2_1 pag2_coffee ">曼特寧</p>
+                <p class="p2_1 pag2_coffee ">巴西</p> -->
+                <div class="col-md-2 pag2_coffee">
+                    <p class="p2_1">曼特寧</p>
+                </div>
+                <div class="col-md-2 pag2_coffee">
+                    <p class="p2_2">巴西</p>
+                </div>
+                <div class="col-md-2 pag2_coffee">
+                    <p class="p2_3">哥倫比亞</p>
+                </div>
+                <div class="col-md-2 pag2_coffee">
+                    <p class="p2_4">瓜地馬拉</p>
+                </div>
+                <div class="col-md-2 pag2_coffee">
+                    <p class="p2_5">爪哇</p>
+                </div>
+                <div class="col-md-2 pag2_coffee">
+                    <p class="p2_6">藍山</p>
+                </div>
             </div>
         </div>
-        <img class="pag_bg2" style="top:150%;" src="images/coffees.png">
-        <img class="pag_bg1" style="top:150%;" src="images/coffees.png">
-        <img class="pag_bg3" style="top:150%;" src="images/coffees.png">
+        <div class="p2_main">
+            <p class="text-right lead">
+                <br/>在藍山尚未公諸於世時，曼特寧咖啡是被認為世界第一 more 優良品
+                <br/>風味特殊，質感濃郁，芳香，沒有柔和的酸味，強烈的苦味是它獨到之處
+                <br/> 而且它的醇度特強，一般都是單品種飲用，
+                <br/>但調配合綜合咖啡時，也是不可或缺的品種
+                <br/> 故多年來一直是綜合咖啡的主要支柱
+                <br/> 對於不喜歡有酸味的咖啡的人，是一項很好的選擇
+                <br/> 曼特寧和爪哇相同的產於印尼產地，但曼特寧品質較穩定
+                <br/> 為蘇門答臘中最具代表性的咖啡
+                <br/> 豆粒甚大，呈黃色或褐色，生產量比較少，故價錢高
+
+            </p>
+        </div>
+        <div class="p2_main">
+            <p class="text-right lead">
+                <br/>中間的裂紋呈褐色，因為當地豆子多以日曬法處理
+                <br/>巴西所產之咖啡，屬中性咖啡豆，味道上的特色是平板中性
+                <br/>整體而言味道柔和不偏苦也不偏酸，被譽為咖啡之中堅
+                <br/>常被用來和其它咖啡豆混合，例如以巴西與曼特寧各半調製之曼巴咖啡就廣受大眾喜愛
+                <br/>巴西是目前全球最大咖啡產國，所以，巴西豆也是所有綜合咖啡的主要成分之一
+                <br/>但因巴西豆具有其特殊的風味，但不被買家喜好，常在咖啡豆產量少時被當成替代品
+                <br/>巴西聖多斯咖啡從聖保羅州的聖多斯港出口，是巴西咖啡的最高級品
+                <br/>粒大，淡綠或為淡黃色的豆，一般幾乎都用來做為調配用
+                <br/>味高，有適合的苦味，亦有如高級品的酸味，亦可直接飲用
+            </p>
+        </div>
+        <div class="p2_main">
+            <p class="text-right lead">
+                <br/>哥倫比亞咖啡中以斯普雷墨SUPREMO最具特色
+                <br/>屬軟性口種，高均衡度，具高度香氣，良質的酸度及甘甜味
+                <br/>整體而言是具有酸中帶甘，苦味中平之良質特性,尤其異香撲鼻
+                <br/>風味奇佳，其品質及香味穩定，有股地瓜皮的奇特風味，色如釀好的酒
+                <br/>乃咖啡中之佼佼者。一種帶甜味及酸味且非常香醇的咖啡，微苦，風味奇特
+                <br/>咖啡豆中間裂紋呈白色，因為當地生產的豆子以水洗居多
+                <br/>哥倫比亞是全球第二大咖啡產國， 所以在綜合咖啡中也常看到哥倫比亞咖啡豆
+                <br/>特色是在於他的酸度和均衡的風味。
+            </p>
+        </div>
+        <div class="p2_main">
+            <p class="text-right lead">
+                瓜地馬拉咖啡豆的豆表光滑硬度高，微酸香醇且順口，特殊的煙燻味極為誘人，味道香醇而稍具野性，是混合式咖啡的最佳材料。 其分類依海拔標高分為七個等級。產於高地者越香醇，而產於低地的咖啡豆，品質則較低落。 瓜地馬拉為日本人最熟悉的咖啡豆，第一產地位於緊臨墨西哥山嶽地帶的聖馬爾克斯。 第二產地為南部的凱薩兒德南哥。其他尚有戈邦、安地古亞也很有名。 這種咖啡豆的特色在於醇度很高，在單品中僅次於曼特寧，但因為成本較高，在一般綜合咖啡中反而少見到他的蹤影。
+            </p>
+        </div>
+        <div class="p2_main">
+            <p class="text-right lead">
+                作為調配綜合咖啡最理想的豆子，其酸性極少，苦味強烈，煎焙較淺薄，則有如大豆之味，煎焙過度則苦味娛強，因此最適合配合使用。 為了提昇風味的豐富性，純品飲者較少，是南洋咖啡之代表品種。綜合咖啡若調上羅姆斯達咖啡，可使咖啡濃度增強,甘味增加。 　　羅姆斯達是產於印尼的豆子，爪哇已成為一個咖啡中心，味苦而香醇濃郁，印尼豆帶土氣，配合狂野、醇酒般的葉門摩卡豆是不錯的組合。 　　從前爪哇是阿拉伯種，現在的是羅姆斯達種。在1920年發生了病害，大多數生產園荒廢，從那以後改種抵抗力強的羅姆斯達種。
+            </p>
+        </div>
+        <div class="p2_main">
+            <p class="text-right lead">藍山咖啡香味較淡，但喝起來卻非常香醇滑口，沒有苦苦的味道，但它卻帶了一點點的酸，馥郁的果香，優質且均衡的內容，一般都單品種飲用，乃咖啡中最好品種。因為產量極少，價格昂貴，一般人很少喝得到真正的藍山，多是味道極近似的咖啡所調製，但價格仍比一般咖啡高昂。 藍山咖啡豆的形狀飽滿，而且平均比一般豆子還要大，中間的白色裂紋，是經過水洗的處理。 它產自牙買加藍山海拔2500尺以上的斜坡上，屬於咖啡中的極品，價位也是最高的一種，它的產量有限，但大都被日本、美國和英國的咖啡買家壟斷，所以市面上的藍山大多不是純正的，購買時必須小心！
+                例如有一種來自中美洲的『大象豆』，就是一種常見的仿冒品！ 要特別注意的是→千萬別貪小便宜！如果你買的藍山咖啡豆，價位只比一般哥倫比亞豆貴個２０％，這裡面真的藍山豆大概不會超過２０％。
+            </p>
+        </div>
+
+        <img class="pag_bg1" style="top:130%;" src="images/coffees.png">
+
     </div>
     <div id="third"></div>
     <div id="forth"></div>
