更改navbar的顏色

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-    <nav class="navbar-default navbar-fixed-top" role="navigation" style="background-color: #795548;box-shadow:5px 0px 12px black;padding:3px;">
+    <nav class="navbar-default navbar-fixed-top" role="navigation" style="background-color: #4d342f;box-shadow:5px 0px 12px black;padding:3px;">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#" style="color:#efebe9;">
