優化pag2's jquer & 增加按鈕回饋

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="css/locate.css">
+    <link rel="stylesheet" href="css/pag2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
 
@@ -81,22 +82,22 @@
                 <!-- <p class="p2_1 pag2_coffee ">曼特寧</p>
                 <p class="p2_1 pag2_coffee ">巴西</p> -->
                 <div class="col-md-2 pag2_coffee">
-                    <p class="p2_1">曼特寧</p>
+                    <p class="p2_but">曼特寧</p>
                 </div>
                 <div class="col-md-2 pag2_coffee">
-                    <p class="p2_2">巴西</p>
+                    <p class="p2_but">巴西</p>
                 </div>
                 <div class="col-md-2 pag2_coffee">
-                    <p class="p2_3">哥倫比亞</p>
+                    <p class="p2_but">哥倫比亞</p>
                 </div>
                 <div class="col-md-2 pag2_coffee">
-                    <p class="p2_4">瓜地馬拉</p>
+                    <p class="p2_but">瓜地馬拉</p>
                 </div>
                 <div class="col-md-2 pag2_coffee">
-                    <p class="p2_5">爪哇</p>
+                    <p class="p2_but">爪哇</p>
                 </div>
                 <div class="col-md-2 pag2_coffee">
-                    <p class="p2_6">藍山</p>
+                    <p class="p2_but">藍山</p>
                 </div>
             </div>
         </div>
