--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </div>
         </div>
         <div class="p2_main">
-            <p class="text-right lead">
+            <p class="text-justify lead">
                 <br/>在藍山尚未公諸於世時，曼特寧咖啡是被認為世界第一 more 優良品
                 <br/>風味特殊，質感濃郁，芳香，沒有柔和的酸味，強烈的苦味是它獨到之處
                 <br/> 而且它的醇度特強，一般都是單品種飲用，
@@ -116,7 +116,7 @@
             </p>
         </div>
         <div class="p2_main">
-            <p class="text-right lead">
+            <p class="text-justify lead">
                 <br/>中間的裂紋呈褐色，因為當地豆子多以日曬法處理
                 <br/>巴西所產之咖啡，屬中性咖啡豆，味道上的特色是平板中性
                 <br/>整體而言味道柔和不偏苦也不偏酸，被譽為咖啡之中堅
@@ -129,7 +129,7 @@
             </p>
         </div>
         <div class="p2_main">
-            <p class="text-right lead">
+            <p class="text-justify lead">
                 <br/>哥倫比亞咖啡中以斯普雷墨SUPREMO最具特色
                 <br/>屬軟性口種，高均衡度，具高度香氣，良質的酸度及甘甜味
                 <br/>整體而言是具有酸中帶甘，苦味中平之良質特性,尤其異香撲鼻
@@ -141,17 +141,17 @@
             </p>
         </div>
         <div class="p2_main">
-            <p class="text-right lead">
+            <p class="text-justify lead">
                 瓜地馬拉咖啡豆的豆表光滑硬度高，微酸香醇且順口，特殊的煙燻味極為誘人，味道香醇而稍具野性，是混合式咖啡的最佳材料。 其分類依海拔標高分為七個等級。產於高地者越香醇，而產於低地的咖啡豆，品質則較低落。 瓜地馬拉為日本人最熟悉的咖啡豆，第一產地位於緊臨墨西哥山嶽地帶的聖馬爾克斯。 第二產地為南部的凱薩兒德南哥。其他尚有戈邦、安地古亞也很有名。 這種咖啡豆的特色在於醇度很高，在單品中僅次於曼特寧，但因為成本較高，在一般綜合咖啡中反而少見到他的蹤影。
             </p>
         </div>
         <div class="p2_main">
-            <p class="text-right lead">
+            <p class="text-justify lead">
                 作為調配綜合咖啡最理想的豆子，其酸性極少，苦味強烈，煎焙較淺薄，則有如大豆之味，煎焙過度則苦味娛強，因此最適合配合使用。 為了提昇風味的豐富性，純品飲者較少，是南洋咖啡之代表品種。綜合咖啡若調上羅姆斯達咖啡，可使咖啡濃度增強,甘味增加。 　　羅姆斯達是產於印尼的豆子，爪哇已成為一個咖啡中心，味苦而香醇濃郁，印尼豆帶土氣，配合狂野、醇酒般的葉門摩卡豆是不錯的組合。 　　從前爪哇是阿拉伯種，現在的是羅姆斯達種。在1920年發生了病害，大多數生產園荒廢，從那以後改種抵抗力強的羅姆斯達種。
             </p>
         </div>
         <div class="p2_main">
-            <p class="text-right lead">藍山咖啡香味較淡，但喝起來卻非常香醇滑口，沒有苦苦的味道，但它卻帶了一點點的酸，馥郁的果香，優質且均衡的內容，一般都單品種飲用，乃咖啡中最好品種。因為產量極少，價格昂貴，一般人很少喝得到真正的藍山，多是味道極近似的咖啡所調製，但價格仍比一般咖啡高昂。 藍山咖啡豆的形狀飽滿，而且平均比一般豆子還要大，中間的白色裂紋，是經過水洗的處理。 它產自牙買加藍山海拔2500尺以上的斜坡上，屬於咖啡中的極品，價位也是最高的一種，它的產量有限，但大都被日本、美國和英國的咖啡買家壟斷，所以市面上的藍山大多不是純正的，購買時必須小心！
+            <p class="text-justify lead">藍山咖啡香味較淡，但喝起來卻非常香醇滑口，沒有苦苦的味道，但它卻帶了一點點的酸，馥郁的果香，優質且均衡的內容，一般都單品種飲用，乃咖啡中最好品種。因為產量極少，價格昂貴，一般人很少喝得到真正的藍山，多是味道極近似的咖啡所調製，但價格仍比一般咖啡高昂。 藍山咖啡豆的形狀飽滿，而且平均比一般豆子還要大，中間的白色裂紋，是經過水洗的處理。 它產自牙買加藍山海拔2500尺以上的斜坡上，屬於咖啡中的極品，價位也是最高的一種，它的產量有限，但大都被日本、美國和英國的咖啡買家壟斷，所以市面上的藍山大多不是純正的，購買時必須小心！
                 例如有一種來自中美洲的『大象豆』，就是一種常見的仿冒品！ 要特別注意的是→千萬別貪小便宜！如果你買的藍山咖啡豆，價位只比一般哥倫比亞豆貴個２０％，這裡面真的藍山豆大概不會超過２０％。
             </p>
         </div>
