更改導覽列按鈕樣式

--- a/index.html
+++ b/index.html
@@ -44,16 +44,42 @@
               </button>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
-                <ul class="nav navbar-nav">
-                    <li class="test"><a href="#home" style="color:#efebe9;">Home</a></li>
+                <ul class="nav navbar-nav navbar-right">
                     <li class="test">
-                        <a href="#second" style="color:#efebe9;">精選介紹</a></li>
+                        <a href="#home">
+                            <div class="text">
+                                Home
+                            </div>
+                        </a>
+                    </li>
                     <li class="test">
-                        <a href="#third" style="color:#efebe9;">烘培藝術</a></li>
+                        <a href="#second">
+                            <div class="text">
+                                精選介紹
+                            </div>
+                        </a>
+                    </li>
                     <li class="test">
-                        <a href="#forth" style="color:#efebe9;">品味咖啡</a></li>
+                        <a href="#third">
+                            <div class="text">
+                                烘培藝術
+                            </div>
+                        </a>
+                    </li>
                     <li class="test">
-                        <a href="master.html" style="color:#efebe9;">後記</a></li>
+                        <a href="#forth">
+                            <div class="text">
+                                品味咖啡
+                            </div>
+                        </a>
+                    </li>
+                    <li class="test">
+                        <a href="#">
+                            <div class="text">
+                                後記
+                            </div>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
