更改第二頁面樣式

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="css/pag2.css">
     <link rel="stylesheet" href="css/locate.css">
+    <link rel="stylesheet" href="css/coffeeImgMedia.css">
+    <link rel="stylesheet" href="css/pag3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
 
@@ -198,7 +200,43 @@
         <img class="pag_bg1" style="top:130%;" src="images/coffees.png">
 
     </div>
-    <div id="third"></div>
+    <div id="third">
+        <div class="container-fluid">
+            <div class="row" style="padding-top:10px;">
+
+                <div class="col-md-12  ">
+                    <p id="pag2_text">豆の影響因素</p>
+                </div>
+                <div class="col-md-2 ">
+                    <p class="p3_but">產地</p>
+                    <div class="origin">
+                        <ul>
+                            <li>巴西</li>
+                            <li>哥倫比亞</li>
+                            <li>印尼</li>
+                        </ul>
+                    </div>
+
+                </div>
+                <div class="col-md-2 ">
+                    <p class="p3_but">處理過程</p>
+                </div>
+                <div class="col-md-2 ">
+                    <p class="p3_but">烘培</p>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="circle">
+
+        </div>
+
+        <div class="p3_1 speech-bubble speech-bubble-right">
+            箭头在右侧
+        </div>
+
+    </div>
     <div id="forth"></div>
 
 
