--- a/index.html
+++ b/index.html
@@ -11,23 +11,33 @@
     <!-- <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/style.css"> -->
 
+    <link rel="stylesheet" href="https://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="scripts/jquery.localscroll-1.2.7-min.js"></script>
     <script type="text/javascript" src="scripts/jquery.parallax-1.1.3.js"></script>
     <script type="text/javascript" src="scripts/jquery.scrollTo-1.4.2-min.js"></script>
     <script type="text/javascript" src="js/mobile.js"></script>
     <script type="text/javascript" src="js/pag2.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>v
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="css/pag2.css">
     <link rel="stylesheet" href="css/locate.css">
     <link rel="stylesheet" href="css/coffeeImgMedia.css">
     <link rel="stylesheet" href="css/pag3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+
+    <script src="dist/jquery-loader.js"></script>
+    <script src="dist/remodal.js"></script>
+    <link rel="stylesheet" href="dist/remodal.css">
+    <link rel="stylesheet" href="dist/remodal-default-theme.css">
+
 </head>
 
 <body>
@@ -201,41 +211,88 @@
     <div id="third">
         <div class="container-fluid">
             <div class="row" style="padding-top:10px;">
-
                 <div class="col-md-12  ">
-                    <p id="pag2_text">豆の影響因素</p>
+                    <p id="pag3_text">豆の影響因素</p>
                 </div>
                 <div class="col-md-2 ">
                     <p class="p3_but">產地</p>
-                    <div class="origin">
-                        <ul>
-                            <li>巴西</li>
+                    <div class="p3_rwdMain">
+                        <ul style="list-style-type:none;">
+                            <li data-toggle="modal" data-target="#myModal">巴西</li>
                             <li>哥倫比亞</li>
                             <li>印尼</li>
+                            <li>衣索比亞</li>
+                            <li>肯亞</li>
+                            <li>夏威夷</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-2 ">
+                    <p class="p3_but">處理過程</p>
+                    <div class="p3_rwdMain">
+                        <ul style="list-style-type:none;">
+                            <li>日曬法</li>
+                            <li>水洗法</li>
+                            <li>半日曬法</li>
+                            <li>半水洗法</li>
                         </ul>
                     </div>
 
                 </div>
                 <div class="col-md-2 ">
-                    <p class="p3_but">處理過程</p>
-                </div>
-                <div class="col-md-2 ">
                     <p class="p3_but">烘培</p>
+                    <div class="p3_rwdMain">
+                        <ul style="list-style-type:none;">
+                            <li>極淺焙</li>
+                            <li>淺焙</li>
+                            <li>中焙</li>
+                            <li>中深焙</li>
+                            <li>程式烘焙</li>
+                            <li>深焙</li>
+                            <li>法式烘焙</li>
+                            <li>重焙</li>
+                        </ul>
+                    </div>
                 </div>
 
             </div>
         </div>
 
-        <div class="circle">
+
+
+        <div class="remodal-bg">
+            <a href="#" data-remodal-target="modal">Call</a>
+        </div>
+
+        <div class="remodal" data-remodal-id="modal">
+            <!-- <a data-remodal-action="close" class="remodal-close"></a> -->
+            <h1>標題</h1>
+            <p>
+                內文
+            </p>
+            <br>
+            <!-- <a data-remodal-action="cancel" class="remodal-cancel" href="#">取消</a> -->
+            <a data-remodal-action="confirm" class="remodal-confirm" href="#">確定</a>
+        </div>
+
+        <div id="target"></div>
+
+
+
+
+
+        <!-- <div class="circle">
 
         </div>
 
         <div class="p3_1 speech-bubble speech-bubble-right">
             箭头在右侧
-        </div>
+        </div> -->
 
     </div>
-    <div id="forth"></div>
+    <div id="forth">
+
+    </div>
 
 
 </body>
