修正navbar的bug 新增頁面三手機版內容

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/css/style.css"> -->
 
     <link rel="stylesheet" href="https://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+    <!-- <script src="https://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script> -->
     <script src="https://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
@@ -218,12 +218,12 @@
                     <p class="p3_but">產地</p>
                     <div class="p3_rwdMain">
                         <ul style="list-style-type:none;">
-                            <li data-remodal-target="modal">巴西</li>
+                            <li data-remodal-target="modal_1">巴西</li>
                             <li data-remodal-target="modal_2">哥倫比亞</li>
-                            <li>印尼</li>
-                            <li>衣索比亞</li>
-                            <li>肯亞</li>
-                            <li>夏威夷</li>
+                            <li data-remodal-target="modal_3">印尼</li>
+                            <li data-remodal-target="modal_4">衣索比亞</li>
+                            <li data-remodal-target="modal_5">肯亞</li>
+                            <li data-remodal-target="modal_6">夏威夷</li>
                         </ul>
                     </div>
                 </div>
@@ -231,10 +231,10 @@
                     <p class="p3_but">處理過程</p>
                     <div class="p3_rwdMain">
                         <ul style="list-style-type:none;">
-                            <li>日曬法</li>
-                            <li>水洗法</li>
-                            <li>半日曬法</li>
-                            <li>半水洗法</li>
+                            <li data-remodal-target="modal_7">日曬法</li>
+                            <li data-remodal-target="modal_8">水洗法</li>
+                            <li data-remodal-target="modal_9">半日曬法</li>
+                            <li data-remodal-target="modal_10">半水洗法</li>
                         </ul>
                     </div>
 
@@ -243,14 +243,14 @@
                     <p class="p3_but">烘培</p>
                     <div class="p3_rwdMain">
                         <ul style="list-style-type:none;">
-                            <li>極淺焙</li>
-                            <li>淺焙</li>
-                            <li>中焙</li>
-                            <li>中深焙</li>
-                            <li>程式烘焙</li>
-                            <li>深焙</li>
-                            <li>法式烘焙</li>
-                            <li>重焙</li>
+                            <li data-remodal-target="modal_11">極淺焙</li>
+                            <li data-remodal-target="modal_12">淺焙</li>
+                            <li data-remodal-target="modal_13">中焙</li>
+                            <li data-remodal-target="modal_14">中深焙</li>
+                            <li data-remodal-target="modal_15">程式烘焙</li>
+                            <li data-remodal-target="modal_16">深焙</li>
+                            <li data-remodal-target="modal_17">法式烘焙</li>
+                            <li data-remodal-target="modal_18">重焙</li>
                         </ul>
                     </div>
                 </div>
@@ -264,7 +264,7 @@
             <a href="#" data-remodal-target="modal">Call</a>
         </div> -->
 
-        <div class="remodal" data-remodal-id="modal">
+        <div class="remodal" data-remodal-id="modal_1">
             <!-- <a data-remodal-action="close" class="remodal-close"></a> -->
             <h3>巴西</h3>
             <p>
@@ -275,19 +275,122 @@
             <a data-remodal-action="confirm" class="remodal-confirm" href="#">OK</a>
         </div>
 
-        <!-- <div id="target"></div> -->
+
         <div class="remodal" data-remodal-id="modal_2">
-            <!-- <a data-remodal-action="close" class="remodal-close"></a> -->
             <h3>哥倫比亞</h3>
-            <p>
-                味道比較淡，平衡度好，低酸度，餘味有果香。在美國比較流行。
-            </p>
+            <p>味道比較淡，平衡度好，低酸度，餘味有果香。在美國比較流行。</p>
             <br>
-            <!-- <a data-remodal-action="cancel" class="remodal-cancel" href="#">取消</a> -->
             <a data-remodal-action="confirm" class="remodal-confirm" href="#">OK</a>
         </div>
 
+        <div class="remodal" data-remodal-id="modal_3">
+            <h3>印尼</h3>
+            <p>有泥土芳香或煙熏味，有苦可可餘味，醇度厚實</p>
+            <br>
+            <a data-remodal-action="confirm" class="remodal-confirm" href="#">OK</a>
+        </div>
+        <div class="remodal" data-remodal-id="modal_4">
+            <h3>衣索比亞</h3>
+            <p>咖啡原產地，種類多樣性高。許多被形容有糖漿味，並有草莓或藍莓的餘味</p>
+            <br>
+            <a data-remodal-action="confirm" class="remodal-confirm" href="#">OK</a>
+        </div>
+        <div class="remodal" data-remodal-id="modal_5">
+            <h3>肯亞</h3>
+            <p>味道厚實，有點番茄酸味</p>
+            <br>
+            <a data-remodal-action="confirm" class="remodal-confirm" href="#">OK</a>
+        </div>
+        <div class="remodal" data-remodal-id="modal_6">
+            <h3>夏威夷</h3>
+            <p>帶甜香、溫和、香醇、柔潤</p>
+            <br>
+            <a data-remodal-action="confirm" class="remodal-confirm" href="#">OK</a>
+        </div>
 
+        <!-- 處理過程         -->
+        <div class="remodal" data-remodal-id="modal_7">
+            <h3>日曬法</h3>
+            <p>日曬法是最古老、省事的生豆處理法</p>
+            <p>一.篩除浮豆</p>
+            <p>二.日曬乾燥</p>
+            <p>三.去殼</p>
+            <br>
+            <a data-remodal-action="confirm" class="remodal-confirm" href="#">OK</a>
+        </div>
+        <div class="remodal" data-remodal-id="modal_8">
+            <h3>水洗法</h3>
+            <p>水洗法是目前較普遍的生豆處理法。 <br> 一.篩除浮豆
+                <br> 二.去果肉 <br> 三.發酵去果膠 <br> 四.乾燥
+            </p>
+            <br>
+            <a data-remodal-action="confirm" class="remodal-confirm" href="#">OK</a>
+        </div>
+        <div class="remodal" data-remodal-id="modal_9">
+            <h3>半日曬法</h3>
+            <p>傳統日曬法區域提高日曬豆品質的改良處理法 <br> 一.篩除浮豆 (同日曬法) <br> 二.去果肉(同水洗法) <br> 三.日曬乾燥 四.熟成 <br>
+            </p>
+            <br>
+            <a data-remodal-action="confirm" class="remodal-confirm" href="#">OK</a>
+        </div>
+        <div class="remodal" data-remodal-id="modal_10">
+            <h3>半水洗法</h3>
+            <p>降低傳統水洗法耗用水量的改良處理法 <br> 一.篩除浮豆 <br> 二.去果肉 <br> 三.機器去果膠 <br> 四.乾燥
+            </p>
+            <br>
+            <a data-remodal-action="confirm" class="remodal-confirm" href="#">OK</a>
+        </div>
+
+        <!-- 烘焙 -->
+
+        <div class="remodal" data-remodal-id="modal_11">
+            <h3>極淺焙_light roast</h3>
+            <p>有濃厚的青草味，香氣不足，很少用來品嚐。</p>
+            <br>
+            <a data-remodal-action="confirm" class="remodal-confirm" href="#">OK</a>
+        </div>
+        <div class="remodal" data-remodal-id="modal_12">
+            <h3>淺焙_cinnamon roast</h3>
+            <p>酸度高，略帶香氣，常用來沖美式咖啡。</p>
+            <br>
+            <a data-remodal-action="confirm" class="remodal-confirm" href="#">OK</a>
+        </div>
+        <div class="remodal" data-remodal-id="modal_13">
+            <h3>中焙_medium roast</h3>
+            <p>口感偏酸帶苦，香氣適中，保留咖啡豆的原始風味，常用來做美式咖啡或混合咖啡。</p>
+            <br>
+            <a data-remodal-action="confirm" class="remodal-confirm" href="#">OK</a>
+        </div>
+        <div class="remodal" data-remodal-id="modal_14">
+            <h3>中深焙_high roast</h3>
+            <p>口感層次豐富、酸苦均衡且略帶甜味，香氣風味都好。</p>
+            <br>
+            <a data-remodal-action="confirm" class="remodal-confirm" href="#">OK</a>
+        </div>
+        <div class="remodal" data-remodal-id="modal_15">
+            <h3>城市烘焙_city roast</h3>
+            <p>比中深焙的酸度低一些，完美展現咖啡的風味，是標準的烘焙程度，最受一般大眾歡迎。</p>
+            <br>
+            <a data-remodal-action="confirm" class="remodal-confirm" href="#">OK</a>
+        </div>
+        <div class="remodal" data-remodal-id="modal_16">
+            <h3>深焙_full city roast</h3>
+            <p>苦味比酸味強，餘味回甘，香氣飽滿，多用來做冰咖啡或黑咖啡。</p>
+            <br>
+            <a data-remodal-action="confirm" class="remodal-confirm" href="#">OK</a>
+        </div>
+        <div class="remodal" data-remodal-id="modal_17">
+            <h3>法式烘焙_French roast</h3>
+            <p>苦味濃、味道強烈，沒什麼酸味，帶有煙熏香氣。</p>
+            <br>
+            <a data-remodal-action="confirm" class="remodal-confirm" href="#">OK</a>
+        </div>
+        <div class="remodal" data-remodal-id="modal_18">
+            <h3>重焙_Italian roast</h3>
+            <p>豆子表面有油光，苦味強，有焦味，主要用來做義式濃縮咖啡。</p>
+            <br>
+            <a data-remodal-action="confirm" class="remodal-confirm" href="#">OK</a>
+        </div>
 
 
         <!-- <div class="circle">
