更改第二頁面手機版排版＆內文樣式

--- a/index.html
+++ b/index.html
@@ -117,91 +117,58 @@
                 <div class="col-md-12   ">
                     <p id="pag2_text">百種の豆</p>
                 </div>
-                <div class="col-md-2 pag2_coffee">
+                <div class="col-md-2 col-xs-6 pag2_coffee">
                     <p class="p2_but">曼特寧</p>
                 </div>
-                <div class="col-md-2 pag2_coffee">
+                <div class="col-md-2 col-xs-6  pag2_coffee">
                     <p class="p2_but">巴西</p>
                 </div>
-                <div class="col-md-2 pag2_coffee">
+                <div class="col-md-2 col-xs-6  pag2_coffee">
                     <p class="p2_but">哥倫比亞</p>
                 </div>
-                <div class="col-md-2 pag2_coffee">
+                <div class="col-md-2 col-xs-6 pag2_coffee">
                     <p class="p2_but">瓜地馬拉</p>
                 </div>
-                <div class="col-md-2 pag2_coffee">
+                <div class="col-md-2 col-xs-6  pag2_coffee">
                     <p class="p2_but">爪哇</p>
                 </div>
-                <div class="col-md-2 pag2_coffee">
+                <div class="col-md-2 col-xs-6 pag2_coffee">
                     <p class="p2_but">藍山</p>
                 </div>
             </div>
         </div>
         <div class="p2_main">
-            <p class="text-justify lead">
-                在藍山尚未公諸於世時，曼特寧咖啡是被認為世界第一優良品
-                <br/>風味特殊，質感濃郁，芳香，沒有柔和的酸味，強烈的苦味是它獨到之處
-                <br/> 而且它的醇度特強，一般都是單品種飲用
-                <br/>但調配合綜合咖啡時，也是不可或缺的品種
-                <br/> 故多年來一直是綜合咖啡的主要支柱
-                <br/> 對於不喜歡有酸味的咖啡的人，是一項很好的選擇
-                <br/> 曼特寧和爪哇相同的產於印尼產地，但曼特寧品質較穩定
-                <br/> 為蘇門答臘中最具代表性的咖啡
-                <br/> 豆粒甚大，呈黃色或褐色，生產量比較少，故價錢高
-
+            <p class="text-justify lead" style="font-size:20px;">
+                &emsp;&emsp;在藍山尚未公諸於世時，曼特寧咖啡是被認為世界第一優良品，風味特殊，質感濃郁，芳香，沒有柔和的酸味，強烈的苦味是它獨到之處 ，而且它的醇度特強，一般都是單品種飲用， 但 調配合綜合咖啡時，也是不可或缺的品種。
+                <br>&emsp;&emsp;故多年來一直是綜合咖啡的主要支柱， 對於不喜歡有酸味的咖啡的人，是一項很好的選擇， 曼特寧和爪哇相同的產於印尼產地，但曼特寧品質較穩定， 為蘇門答臘中最具代表性的咖啡， 豆粒甚大，呈黃色或褐色，生產量比較少，故價錢高。
             </p>
         </div>
         <div class="p2_main">
-            <p class="text-justify lead">
-                中間的裂紋呈褐色，因為當地豆子多以日曬法處理
-                <br/>巴西所產之咖啡，屬中性咖啡豆，味道上的特色是平板中性
-                <br/>整體而言味道柔和不偏苦也不偏酸，被譽為咖啡之中堅
-                <br/>常被用來和其它咖啡豆混合，例如以巴西與曼特寧各半調製之曼巴咖啡就廣受大眾喜愛
-                <br/>因巴西豆具有其特殊的風味，不被買家喜好，常在咖啡豆產量少時被當成替代品
+            <p class="text-justify lead" style="font-size:20px;">
+                &emsp;&emsp;中間的裂紋呈褐色，因為當地豆子多以日曬法處理 ，巴西所產之咖啡，屬中性咖啡豆，味道上的特色是平板中性， 整體而言味道柔和不偏苦也不偏酸，被譽為咖啡之中堅。 &emsp;&emsp;常被用來和其它咖啡豆混合，例如以巴西與曼特寧各半調製之曼巴咖啡就廣受大眾喜愛 ，因巴西豆具有其特殊的風味，不被買家喜好，常在咖啡豆產量少時被當成替代品。
             </p>
         </div>
         <div class="p2_main">
-            <p class="text-justify lead">
-                哥倫比亞咖啡中以斯普雷墨SUPREMO最具特色
-                <br/>屬軟性口種，高均衡度，具高度香氣，良質的酸度及甘甜味
-                <br/>整體而言是具有酸中帶甘，苦味中平之良質特性,尤其異香撲鼻
-                <br/>風味奇佳，其品質及香味穩定，有股地瓜皮的奇特風味，色如釀好的酒
-                <br/>乃咖啡中之佼佼者。一種帶甜味及酸味且非常香醇的咖啡，微苦，風味奇特
-                <br/>咖啡豆中間裂紋呈白色，因為當地生產的豆子以水洗居多
-                <br/>特色是在於他的酸度和均衡的風味
+            <p class="text-justify lead" style="font-size:20px;">
+                &emsp;&emsp;哥倫比亞咖啡中以斯普雷墨SUPREMO最具特色， 屬軟性口種，高均衡度，具高度香氣，良質的酸度及甘甜味， 整體而言是具有酸中帶甘，苦味中平之良質特性,尤其異香撲鼻， 風味奇佳，其品質及香味穩定，有股地瓜皮的奇特風味，色如釀好的酒， 乃咖啡中之佼佼者。 <br/> &emsp;&emsp;咖啡豆中間裂紋呈白色，因為當地生產的豆子以水洗居多， 特色是在於他的酸度和均衡的風味。
             </p>
         </div>
         <div class="p2_main">
-            <p class="text-justify lead">
-                瓜地馬拉咖啡豆的豆表光滑硬度高，微酸香醇且順口
-                <br/>特殊的煙燻味極為誘人，味道香醇而稍具野性，是混合式咖啡的最佳材料
-                <br/>其分類依海拔標高分為七個等級。產於高地者越香醇，而產於低地的咖啡豆，品質則較低落
-                <br/>瓜地馬拉為日本人最熟悉的咖啡豆，第一產地位於緊臨墨西哥山嶽地帶的聖馬爾克斯
-                <br/>第二產地為南部的凱薩兒德南哥。其他尚有戈邦、安地古亞也很有名
-                <br/>這種咖啡豆的特色在於醇度很高，在單品中僅次於曼特寧，但因為成本較高
-                <br/>在一般綜合咖啡中反而少見到他的蹤影
+            <p class="text-justify lead" style="font-size:20px;">
+                &emsp;&emsp;瓜地馬拉咖啡豆的豆表光滑硬度高，微酸香醇且順口， 特殊的煙燻味極為誘人，味道香醇而稍具野性，是混合式咖啡的最佳材料， 其分類依海拔標高分為七個等級。產於高地者越香醇，而產於低地的咖啡豆，品質則較低落。
+                <br/>&emsp;&emsp;瓜地馬拉為日本人最熟悉的咖啡豆，第一產地位於緊臨墨西哥山嶽地帶的聖馬爾克斯; 第二產地為南部的凱薩兒德南哥。其他尚有戈邦、安地古亞也很有名， 這種咖啡豆的特色在於醇度很高，在單品中僅次於曼特寧，但因為成本較高， 在一般綜合咖啡中反而少見到他的蹤影。
             </p>
         </div>
         <div class="p2_main">
-            <p class="text-justify lead">
-                作為調配綜合咖啡最理想的豆子，其酸性極少，苦味強烈，煎焙較淺薄，則有如大豆之味
-                <br/>煎焙過度則苦味娛強，因此最適合配合使用
-                <br/>為了提昇風味的豐富性，純品飲者較少，是南洋咖啡之代表品種
-                <br/>綜合咖啡若調上羅姆斯達咖啡，可使咖啡濃度增強,甘味增加
-                <br/>羅姆斯達是產於印尼的豆子，爪哇已成為一個咖啡中心，味苦而香醇濃郁
-                <br/>印尼豆帶土氣，配合狂野、醇酒般的葉門摩卡豆是不錯的組合
-                <br/>從前爪哇是阿拉伯種，現在的是羅姆斯達種
-                <br/>在1920年發生了病害，大多數生產園荒廢，從那以後改種抵抗力強的羅姆斯達種
+            <p class="text-justify lead" style="font-size:20px;">
+                &emsp;&emsp;作為調配綜合咖啡最理想的豆子，其酸性極少，苦味強烈，煎焙較淺薄，則有如大豆之味， 煎焙過度則苦味娛強，因此最適合配合使用， 為了提昇風味的豐富性，純品飲者較少，是南洋咖啡之代表品種。 綜合咖啡若調上羅姆斯達咖啡，可使咖啡濃度增強,甘味增加。
+                <br/>&emsp;&emsp;羅姆斯達是產於印尼的豆子，爪哇已成為一個咖啡中心，味苦而香醇濃郁， 印尼豆帶土氣，配合狂野、醇酒般的葉門摩卡豆是不錯的組合，從前爪哇是阿拉伯種，現在的是羅姆斯達種， 在1920年發生了病害，大多數生產園荒廢，從那以後改種抵抗力強的羅姆斯達種。
             </p>
         </div>
         <div class="p2_main">
-            <p class="text-justify lead">
-                藍山咖啡香味較淡，喝起來卻非常香醇滑口，沒有苦苦的味道
-                <br/>但它卻帶了一點點的酸，馥郁的果香，優質且均衡的內容，一般都單品種飲用
-                <br/>乃咖啡中最好品種。因為產量極少，價格昂貴，一般人很少喝得到真正的藍山
-                <br/>多是味道極近似的咖啡所調製，但價格仍比一般咖啡高昂。藍山咖啡豆的形狀飽滿
-                <br/>而且平均比一般豆子還要大，中間的白色裂紋，是經過水洗的處理
-                <br/>產自牙買加藍山海拔2500尺以上的斜坡上，屬於咖啡中的極品，價位也是最高的一種
+            <p class="text-justify lead" style="font-size:20px;">
+                &emsp;&emsp;藍山咖啡香味較淡，喝起來卻非常香醇滑口，沒有苦苦的味道， 但它卻帶了一點點的酸，馥郁的果香，優質且均衡的內容，一般都單品種飲用， 乃咖啡中最好品種。因為產量極少，價格昂貴，一般人很少喝得到真正的藍山， 多是味道極近似的咖啡所調製，但價格仍比一般咖啡高昂。
+                <br/>&emsp;&emsp;藍山咖啡豆的形狀飽滿， 而且平均比一般豆子還要大，中間的白色裂紋，是經過水洗的處理， 產自牙買加藍山海拔2500尺以上的斜坡上，屬於咖啡中的極品，價位也是最高的一種。
             </p>
         </div>
 
@@ -214,7 +181,7 @@
                 <div class="col-md-12  ">
                     <p id="pag3_text">豆の影響因素</p>
                 </div>
-                <div class="col-md-2 ">
+                <div class="col-md-2 col-md-offset-3 ">
                     <p class="p3_but">產地</p>
                     <div class="p3_rwdMain">
                         <ul style="list-style-type:none;">
