手機彈跳視窗測試

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     <p class="p3_but">產地</p>
                     <div class="p3_rwdMain">
                         <ul style="list-style-type:none;">
-                            <li data-remodal-target="modal_1">巴西</li>
+                            <button type="button" name="button"><li data-remodal-target="modal_1">巴西</li></button>
                             <li data-remodal-target="modal_2">哥倫比亞</li>
                             <li data-remodal-target="modal_3">印尼</li>
                             <li data-remodal-target="modal_4">衣索比亞</li>
