--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     <div class="p3_rwdMain">
                         <ul style="list-style-type:none;">
 
-                            <li data-remodal-target="modal_1"><button type="button" name="button">巴西</button></li>
+                            <li data-remodal-target="modal_1"><a href="#">巴西</a></li>
                             <li data-remodal-target="modal_2">哥倫比亞</li>
                             <li data-remodal-target="modal_3">印尼</li>
                             <li data-remodal-target="modal_4">衣索比亞</li>
