--- a/index.html
+++ b/index.html
@@ -186,7 +186,9 @@
                     <div class="p3_rwdMain">
                         <ul style="list-style-type:none;">
 
-                            <li data-remodal-target="modal_1"><a href="#">巴西</a></li>
+                            <a href="#">
+                                <li data-remodal-target="modal_1">巴西</li>
+                            </a>
                             <li data-remodal-target="modal_2">哥倫比亞</li>
                             <li data-remodal-target="modal_3">印尼</li>
                             <li data-remodal-target="modal_4">衣索比亞</li>
