--- a/index.html
+++ b/index.html
@@ -189,8 +189,10 @@
                             <a href="#">
                                 <li data-remodal-target="modal_1">巴西</li>
                             </a>
-                            <li data-remodal-target="modal_2">哥倫比亞</li>
-                            <li data-remodal-target="modal_3">印尼</li>
+                            <a href="#">
+                                <li data-remodal-target="modal_2">哥倫比亞</li>
+                            </a>
+                            <li data-remodal-target="modal_3" href="#">印尼</li>
                             <li data-remodal-target="modal_4">衣索比亞</li>
                             <li data-remodal-target="modal_5">肯亞</li>
                             <li data-remodal-target="modal_6">夏威夷</li>
